--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="cart.html"><i class="fa-solid fa-cart-shopping" style="color: #1a1a1a;"></i></a></li>
+            <li><a href="cart.html"><i class="fa-solid fa-cart-shopping cart" style="color: #1a1a1a;"></i></a></li>
+            <a href="#" id="close">x</a>
         </ul>
+    </div>
+    <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping" style="color: #1a1a1a;"></i></a>
+        <i id="bar" class="fas fa-outdent"></i> 
     </div>
     </section>
 
