--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
     <div>
         <ul id="navbar">
             <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html" >Shop</a></li>
-            <li><a href="blog.html" class="active">Blog</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html" >About</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="cart.html"><i class="fa-solid fa-cart-shopping cart" style="color: #1a1a1a;"></i></a></li>
             <a href="#" id="close">x</a>
         </ul>
@@ -30,78 +30,41 @@
     </div>
     </section>
 
-    <section id="page-header" class="blog-header">
-        <h2>#readmore</h2>
-        <p>Read all case studies about our product</p>
+    <section id="page-header" class="about-header">
+        <h2>#let's_talk</h2>
+        <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
 
-    <section id="blog">
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="img/blog/b1.jpg">
+    <section id="contact-details" class="section-p1">
+        <div class="Details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit one of our agency locations or contact us today</h2>
+            <h3>Head Office</h3>
+            <div>
+                <li>
+                    <i class="fa-regular fa-map"></i>
+                    <p>56 Glassford Street Glasgow G1 1UL New York</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>contact@example.com</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+234 09 8555 000</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-clock"></i>
+                    <p>Monday to Saturday: 9:00am to 4:00pm</p>
+                </li>
             </div>
-            <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette
-                    waistcoat selfies yr wolf chartreuse hexagon irony, godard...</p>
-                    <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
         </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="img/blog/b2.jpg">
-            </div>
-            <div class="blog-details">
-                <h4>How to Style a Quiff</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette
-                    waistcoat selfies yr wolf chartreuse hexagon irony, godard...</p>
-                    <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/04</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="img/blog/b3.jpg">
-            </div>
-            <div class="blog-details">
-                <h4>Must-Have Skater Girl Items</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette
-                    waistcoat selfies yr wolf chartreuse hexagon irony, godard...</p>
-                    <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>12/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="img/blog/b4.jpg">
-            </div>
-            <div class="blog-details">
-                <h4>Runway-Inspired Trends</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette
-                    waistcoat selfies yr wolf chartreuse hexagon irony, godard...</p>
-                    <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>16/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="img/blog/b5.jpg">
-            </div>
-            <div class="blog-details">
-                <h4>AW20 Menswear Trends</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette
-                    waistcoat selfies yr wolf chartreuse hexagon irony, godard...</p>
-                    <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>10/03</h1>
-        </div>
-    </section>
 
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="fa-regular fa-arrow-right"></i></a>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.4098753529956!2d3.2008726999999997!3d6.
+            4696511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8696500590b1%3A0xf27b47e41fad6dab!2sLagos%20State%20University!5e0!3m2!1sen!2sng!4v1693031304679!5m2!1sen!2sng"
+             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
