--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </section>
 
     <section id="contact-details" class="section-p1">
-        <div class="Details">
+        <div class="details">
             <span>GET IN TOUCH</span>
             <h2>Visit one of our agency locations or contact us today</h2>
             <h3>Head Office</h3>
@@ -64,6 +64,36 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.4098753529956!2d3.2008726999999997!3d6.
             4696511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8696500590b1%3A0xf27b47e41fad6dab!2sLagos%20State%20University!5e0!3m2!1sen!2sng!4v1693031304679!5m2!1sen!2sng"
              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+
+    <section id="form-details">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="E-mail">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+
+        <div class="people">
+            <div>
+                <img src="img/people/1.png" alt="">
+                <p><span>John Doe</span> Senior Marketting Manager <br> Phone: +234 000
+                123 55 31 <br> Email: contact@example.com</p>
+            </div>
+            <div>
+                <img src="img/people/2.png" alt="">
+                <p><span>William Smith</span> HR Manager <br> Phone: +234 000
+                123 55 31 <br> Email: contact@example.com</p>
+            </div>
+            <div>
+                <img src="img/people/3.png" alt="">
+                <p><span>Emma Stone</span> Senior Developer <br> Phone: +234 000
+                123 55 31 <br> Email: contact@example.com</p>
+            </div>
         </div>
     </section>
 
